admin部分，除考点管理均修改完毕

--- a/erems/src/main/resources/templates/update-info.html
+++ b/erems/src/main/resources/templates/update-info.html
@@ -100,14 +100,14 @@
                                                value="无" th:value="*{eduback}">
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>地址</td>
-                                    <td>
-                                        <select id="addressId" name="address.id" th:value="*{address.id}"  th:text="*{address.province+address.city}">
-                                            <option>全部</option>
-                                        </select>
-                                    </td>
-                                </tr>
+                                <!--<tr>-->
+                                    <!--<td>地址</td>-->
+                                    <!--<td>-->
+                                        <!--<select id="addressId" name="address.id" th:value="*{address.id}"  th:text="*{address.province+address.city}">-->
+                                            <!--<option>全部</option>-->
+                                        <!--</select>-->
+                                    <!--</td>-->
+                                <!--</tr>-->
                                 </tbody>
                             </table>
                             <button type="submit" class="btn btn-primary">保存</button>
