--- a/erems/src/main/resources/templates/admin/out-list.html
+++ b/erems/src/main/resources/templates/admin/out-list.html
@@ -31,7 +31,8 @@
                             <tr th:object="${o}">
                                 <td th:text="${ostatus.count}">1</td>
                                 <td th:text="*{name}">考试名</td>
-                                <td th:text="*{#strings.substring(description,0,15)+'...'}">描述</td>
+                                <td th:if="*{#strings.length(description)>15}" th:text="*{#strings.substring(description,0,15)+'...'}">描述</td>
+                                <td th:unless="*{#strings.length(description)>15}" th:text="*{description}">描述</td>
                                 <td th:text="*{#dates.format(time, 'yyyy-MM-dd HH:mm')}">时间</td>
                                 <td>
                                 <a th:href="'/erems/admin/cancelOuted?id='+*{id}">取消过期</a>
